# mario-captoss

./: .gitignore  Cargo.toml  README.md  info.toml  vl.xml
romf/: config.json
romf/fighter/mario/model/captoss/boomerang/: dark_model.numatb  light_model.numatb  metal_boomerang_001_col.nutexb  metal_boomerang_001_nor.nutexb  metal_boomerang_001_prm.nutexb  model.numatb  model.numshb  model.numshexb
romf/fighter/mario/model/captoss/c00/: dark_model.numatb  dark_model_out.xml  light_model.numatb  metamon_model.numatb  model.numatb  model.numdlb  model.numshb  model.nusktb.json
romf/fighter/mario/model/captoss/c06/: def_mario_001_col.nutexb  def_mario_001_nor.nutexb  def_mario_001_prm.nutexb  light_model.numatb  model.numatb  model.numshb  model.nusktb
romf/fighter/mario/model/captoss/c07/: dark_model.numatb  def_mario_001_col.nutexb  def_mario_001_nor.nutexb  def_mario_001_prm.nutexb  light_model.numatb  metamon_model.numatb  model.numatb  model.numdlb  model.numshb  model.nusrcmdlb
romf/fighter/mario/motion/body/c00/: _d01specialsdash.nuanmb  d01specialairs.nuanmb  d01specialairsdash.nuanmb  (+5 more)
romf/fighter/mario/param/: vl - boom.prc  vl.prc
romf/ui/message/: msg_name.xmsbt  msg_tips.xmsbt
romf/ui/replace/skill/skill_0/: skill_0_mario_special_side_0.bntx
src/: custom_vars.rs  imports.rs  installer.rs  lib.rs  util.rs  vars.rs
src/mario/: agent.rs  frame.rs  mod.rs  other_fighters.rs
src/mario/acmd/: capcatch.rs  capdive.rs  capjump.rs  cappy.rs  mod.rs  specials.rs
src/mario/status/: appeal.rs  capcatch.rs  capdive.rs  capjump.rs  mod.rs  specials.rs  wait.rs
src/mario/status/cappy/: fly.rs  haved.rs  hold.rs  hop.rs  jump.rs  mod.rs  pocket.rs  start.rs  start_original.rs  swallowed.rs  turn.rs  turn_original.rs
(+6 files in other folders)
